--- a/goobooks/src/index.scss
+++ b/goobooks/src/index.scss
@@ -1,8 +1,7 @@
 @import "./styles/theme";
-//@import "reset";
+@import "./styles/reset";
 @import "./styles/layout";
 @import "./styles/typography";
-//@import "buttons";
+@import "./styles/buttons";
 @import "./styles/card";
-
-//@import "utilities";
+@import "./styles/utilities";
