--- a/goobooks/src/styles/_theme.scss
+++ b/goobooks/src/styles/_theme.scss
@@ -5,8 +5,7 @@ $tdbc-color-background: #55566b !default;
 
 /* Gradients*/
 $list1: $tdbc-color-primary, $tdbc-color-background, $tdbc-color-secondary;
-
-$list2: $tdbc-color-primary 5%, $tdbc-color-secondary 20%, $tdbc-color-background 66%;
+$list2: $tdbc-color-secondary 55%, $tdbc-color-primary 20%, $tdbc-color-background 15%;
 $list3: $tdbc-color-background  0%,$tdbc-color-background  10%,$tdbc-color-primary 25%,$tdbc-color-primary 39%,$tdbc-color-secondary 79%,$tdbc-color-secondary 100%; 
 
 @mixin gradient($direction, $list) { 
@@ -16,13 +15,14 @@ $list3: $tdbc-color-background  0%,$tdbc-color-background  10%,$tdbc-color-prima
   background: linear-gradient($direction, $list);  
 }
 
+
 /*Blending image and background*/
-$cool-grad: linear-gradient(aqua, royalblue);
+$cool-grad: linear-gradient(rgb(17, 104, 119), rgb(181, 195, 236));
 $meh-grad: linear-gradient(turquoise, transparent);
 $snarky-grad: linear-gradient(navy 75% aqua);
 
 @mixin blendy($img-path, $color: null, $grad: null,
-$blend: multiply)
+$blend: screen)
 {
   $img-path: url('../banner.jpg');
   @if $grad{
@@ -34,9 +34,10 @@ $blend: multiply)
   background-blend-mode: $blend;
 }
 .blend {
-  @include blendy('../banner.jpg', $grad: $snarky-grad);
+  @include blendy($img-path: url('../banner.jpg'), $grad: $cool-grad);
   background-size: cover;
-  width: auto;
+  background-repeat: no-repeat;
+  width: 100%;
   height: 40%;
  
 }
@@ -54,7 +55,7 @@ $tdbc-color-gray: mix(#beb2b2, $tdbc-color-body, 70%) !default;
 $tdbc-colors: map-merge(
   $tdbc-brand-colors,
   (
-    "text": $tdbc-color-body,
+    "text": $tdbc-color-secondary,
     "background": $tdbc-color-background,
     "light": #fff,
     "dark": rgba(black, 0.87),
