--- a/goobooks/src/styles/_buttons.scss
+++ b/goobooks/src/styles/_buttons.scss
@@ -7,8 +7,8 @@
     min-height: 44px;
     padding: 0.25em 1em;
     transition: 180ms ease-in-out;
-    transition-property: background, border;
-    border-radius: $tdbc-border-radius/2;
+    transition-property: blend, border;
+    //border-radius: math.div($tdbc-border-radius, 2);
     background-color: tdbc-color("primary");
     color: #fff;
     font-size: 1.125rem;
