--- a/goobooks/src/styles/_layout.scss
+++ b/goobooks/src/styles/_layout.scss
@@ -1,4 +1,5 @@
 // stylelint-disable-next-line selector-max-type
+@import url('https://fonts.googleapis.com/css?family=GFS Didot&display=swap');
 body {
   display: flex;
   flex-direction: column;
