--- a/goobooks/src/styles/_typography.scss
+++ b/goobooks/src/styles/_typography.scss
@@ -75,7 +75,7 @@ a:not(.tdbc-button) {
 
 pre,
 code {
-  font-family: Consolas, Monaco, "Ballet", "Ballet", monospace;
+  font-family: "GFS Didot" "sans-serif";
   font-weight: bold;
 }
 
